--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_keys = ['Area']\n",
+    "city_keys = ['Area', 'City', 'Cou']\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
