Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "city_values = city_values # [68, 'Greenville', 'USA', 93]"
+    "city_values = [city_values] # [68, 'Greenville', 'USA', 93]"
    ]
   },
   {
