--- a/index.ipynb
+++ b/index.ipynb
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "city_values = [68, 'Green'] # [68, 'Greenville', 'USA', 93]"
+    "city_values = [68, 'Greenville', 'USA', 9] # [68, 'Greenville', 'USA', 93]"
    ]
   },
   {
