--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "salina = {'City'; 'Salina Island'} \n",
+    "salina = {'City'; 'Salina Island'; 'Country'; 'Italy'; } \n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
