--- a/index.ipynb
+++ b/index.ipynb
@@ -305,20 +305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-def75aaa020e>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-11-cebf607eda17>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-def75aaa020e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    salina = {'City'; 'Salina Island'; 'Country'; 'Italy'; 'Population': 3, 'Area': 26}\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-cebf607eda17>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    salina = {'City': 'Salina Island'; 'Country'; 'Italy'; 'Population': 3, 'Area': 26}\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "salina = {'City'; 'Salina Island'; 'Country'; 'Italy'; 'Population': 3, 'Area': 26} \n",
+    "salina = {'City': 'Salina Island'; 'Country'; 'Italy'; 'Population': 3, 'Area': 26} \n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
