--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,7 @@
     }
    ],
    "source": [
-    "salina = {'City': 'Salina Island'; 'Country'; 'Italy'; 'Population': 3, 'Area': 26} \n",
+    "salina = {'City': 'Salina Island': 'Country': 'Italy': 'Population': 3, 'Area': 26} \n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
