--- a/index.ipynb
+++ b/index.ipynb
@@ -305,20 +305,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-12-d004480186a6>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-d004480186a6>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    salina = {'City': 'Salina Island': 'Country': 'Italy': 'Population': 3, 'Area': 26}\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "salina = {'City': 'Salina Island', 'Country': 'Italy': 'Population': 3, 'Area': 26} \n",
+    "salina = {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26} \n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
