--- a/index.ipynb
+++ b/index.ipynb
@@ -362,13 +362,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_count = None\n",
+    "city_count = 12\n",
     "city_count # 12"
    ]
   },
@@ -385,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[7]['City'] = None\n",
+    "cities[7]['City'] = 'None'\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
