--- a/index.ipynb
+++ b/index.ipynb
@@ -392,11 +392,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PyeongChang'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cities[7]['City'] = 'None'\n",
+    "cities[7]['City'] = 'PyeongChang'\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
