--- a/index.ipynb
+++ b/index.ipynb
@@ -424,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_values = ['PyeongChang']\n",
+    "pyeongchang_values = ['PyeongChang', 'South Korea', 44, 1]\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
