--- a/index.ipynb
+++ b/index.ipynb
@@ -442,16 +442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NoneType"
+       "list"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = None\n",
+    "pyeongchang_keys = \n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
    ]
