--- a/index.ipynb
+++ b/index.ipynb
@@ -473,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = \n",
+    "pyeongchang_keys = ['City', '']\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
    ]
